:art: System security updates with respect to new Spring and Keycloak versions, alongside controller changes with respect to those.